--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,7 @@ dependencies {
     ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
     implementation "com.github.bumptech.glide:glide:$rootProject.glideVersion"
     implementation "com.jakewharton.timber:timber:$rootProject.timberVersion"
+
+    implementation 'com.android.support:support-annotations:28.0.0'
+
 }
