--- a/components/build.gradle
+++ b/components/build.gradle
@@ -44,4 +44,26 @@ dependencies {
     // Third party                                                                                                    //
     ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
     implementation "com.github.bumptech.glide:glide:$rootProject.glideVersion"
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$rootProject.kotlinVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.coroutinesVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.coroutinesVersion"
+
+    ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+    // AndroidX                                                                                                       //
+    ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+    implementation "android.arch.navigation:navigation-fragment-ktx:$rootProject.navigationVersion"
+    implementation "android.arch.navigation:navigation-ui-ktx:$rootProject.navigationVersion"
+    implementation "androidx.appcompat:appcompat:$rootProject.supportLibraryVersion"
+    implementation "androidx.core:core-ktx:$rootProject.ktxVersion"
+    implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.lifecycleVersion"
+    implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayoutVersion"
+    implementation "androidx.recyclerview:recyclerview:$rootProject.recyclerViewVersion"
+
+    ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+    // Third party                                                                                                    //
+    ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+    implementation "com.github.bumptech.glide:glide:$rootProject.glideVersion"
+    implementation "com.jakewharton.timber:timber:$rootProject.timberVersion"
 }
