--- a/components/src/main/AndroidManifest.xml
+++ b/components/src/main/AndroidManifest.xml
@@ -1,2 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="fr.athanase.components"/>
+          package="fr.athanase.components">
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+</manifest>
