--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,12 +51,17 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.lifecycleVersion"
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayoutVersion"
     implementation "androidx.recyclerview:recyclerview:$rootProject.recyclerViewVersion"
+    implementation "com.google.android.material:material:$materialVersion"
+
 
     ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
     // Third party                                                                                                    //
     ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
     implementation "com.github.bumptech.glide:glide:$rootProject.glideVersion"
     implementation "com.jakewharton.timber:timber:$rootProject.timberVersion"
+    implementation "com.igraal.lib:components-base:$componentsVersion"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
+
 
     implementation 'com.android.support:support-annotations:28.0.0'
 
