--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,9 @@
                  android:roundIcon="@mipmap/ic_launcher_round"
                  android:supportsRtl="true"
                  android:usesCleartextTraffic="true"
-                 android:theme="@style/AppTheme">
+                 android:theme="@style/BaseAppTheme">
 
-        <activity android:name=".DeezerActivity"
-                  android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".DeezerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
