--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,10 @@
 
 buildscript {
     ext {
+
+        repoAccessKey = System.getenv('ANDROID_MAVEN_REPO_ACCESS_KEY')
+        repoSecretKey = System.getenv('ANDROID_MAVEN_REPO_SECRET_KEY')
+
         // Sdk and tools
         compileSdkVersion = 28
         minSdkVersion = 23
@@ -19,10 +23,10 @@ buildscript {
         supportLibraryVersion = '1.0.2'
         navigationVersion = '1.0.0'
         recyclerViewVersion = '1.0.0'
-        materialVersion = '1.0.0'
         lifecycleVersion = '2.0.0'
         constraintLayoutVersion = '1.1.3'
         roomVersion = '1.0.0'
+        materialVersion = '1.1.0-alpha07'
 
         // 3rd party
         glideVersion = '4.9.0'
@@ -30,9 +34,13 @@ buildscript {
         retrofitVersion = '2.5.0'
         realmVersion = '5.5.0'
         timberVersion = '4.7.1'
+        lottieVersion = '3.0.6'
 
         // Unit test
         junitVersion = '4.12'
+
+        // IGraal
+        componentsVersion = '1.0-DEV-30'
     }
 
     repositories {
@@ -52,6 +60,13 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url "s3://igraal-android-maven-repo.s3.amazonaws.com"
+            credentials(AwsCredentials) {
+                accessKey repoAccessKey
+                secretKey repoSecretKey
+            }
+        }
     }
 }
 
