--- a/components/build.gradle
+++ b/components/build.gradle
@@ -27,10 +27,16 @@ android {
 }
 
 dependencies {
+
+    implementation project(':entites')
+
     ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
     // Kotlin                                                                                                         //
     ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$rootProject.kotlinVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$rootProject.kotlinVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$rootProject.kotlinVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.coroutinesVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.coroutinesVersion"
 
     ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
     // AndroidX                                                                                                       //
@@ -44,10 +50,6 @@ dependencies {
     // Third party                                                                                                    //
     ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
     implementation "com.github.bumptech.glide:glide:$rootProject.glideVersion"
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$rootProject.kotlinVersion"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.coroutinesVersion"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.coroutinesVersion"
 
     ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
     // AndroidX                                                                                                       //
@@ -66,4 +68,6 @@ dependencies {
     ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
     implementation "com.github.bumptech.glide:glide:$rootProject.glideVersion"
     implementation "com.jakewharton.timber:timber:$rootProject.timberVersion"
+    implementation "com.igraal.lib:components-base:$componentsVersion"
+
 }
